--- a/MovieLens_Solution/Test.html
+++ b/MovieLens_Solution/Test.html
@@ -1651,8 +1651,12 @@ $(document).ready(function () {
 
 <p><span class="math display">\[
 \begin{aligned}
- AR(p): Y_i &amp;= c + \epsilon_i + \phi_i Y_{i-1} \dots \\
- Y_{i} &amp;= c + \phi_i Y_{i-1} \dots
+ Y_{u,i} &amp;= \mu + b_u + \epsilon_{u,i}
+\end{aligned}
+\]</span></p>
+<p><span class="math display">\[
+\begin{aligned}
+\frac{1}{N} \sum_{u,i} (y_{u,i} - \mu -b_{i})^2 + \lambda \sum_{i} b_{i}^2
 \end{aligned}
 \]</span></p>
 
